--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Clone Repostitory
       run: git clone https://github.com/dillongoostudios/goo-engine.git
     - name: cd goo-engine
-      run: cd ./goo-engine
+      run: cd ./goo-engine && dir
     - name: directory
       run: dir
 
