--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -40,6 +40,9 @@ jobs:
         choco install git -y
     - name: Clone Repostitory
       run: git clone https://github.com/dillongoostudios/goo-engine.git
+
+    - name: Make_update_test
+      run: make update && make 
    
     - name: cd goo-engine
       run: |
