--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Upload release artifact
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.3 }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./path/to/executable
