--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -17,7 +17,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.sha }}
+        tag_name: "v0.0.1"
         release_name: Release ${{ github.sha }}
         body: |
           Release ${{ github.sha }}
