--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -35,6 +35,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./executable
+        asset_path: executable
         asset_name: executable-${{ github.sha }}.exe
         asset_content_type: application/octet-stream
