--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -14,6 +14,8 @@ jobs:
     - name: buils
       run: |
          echo "brrr" > executable
+         dir
+         ls
     
     - name: Checkout code
       uses: actions/checkout@v2
@@ -24,7 +26,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "v0.0.3"
+        tag_name: "v0.0.4"
         release_name: Release ${{ github.sha }}
         body: |
           Release ${{ github.sha }}
