--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -19,6 +19,8 @@ jobs:
          echo "brrr" > executable
     - name: ls1
       run: ls
+    - name: pwf1
+      run: pwd      
         
     - name: Checkout code
       uses: actions/checkout@v2
@@ -29,7 +31,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "v0.0.6"
+        tag_name: "v0.0.8"
         release_name: Release ${{ github.sha }}
         body: |
           Release ${{ github.sha }}
@@ -40,6 +42,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: executable
+        asset_path: ./executable
         asset_name: executable-${{ github.sha }}.exe
         asset_content_type: application/octet-stream
