--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -15,12 +15,16 @@ jobs:
       uses: actions/checkout@v2
     - name: buils
       run: |
-         touch executable
-         echo "brrr" > executable
+         sudo apt-get update
+         sudo apt-get install build-essential
+         gcc --version
     - name: ls1
       run: ls
     - name: pwf1
-      run: pwd      
+      run: pwd   
+      
+    - name: pwfff
+      run: gcc hello.c -o hello
         
     - name: Checkout code
       uses: actions/checkout@v2
@@ -31,7 +35,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "v0.0.8"
+        tag_name: "v0.0.9"
         release_name: Release ${{ github.sha }}
         body: |
           Release ${{ github.sha }}
@@ -42,6 +46,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./executable
-        asset_name: executable-${{ github.sha }}.exe
+        asset_path: ./hello
+        asset_name: hello-${{ github.sha }}.exe
         asset_content_type: application/octet-stream
+
+    - name: ls2
+      run: ls
