--- a/.github/workflows/Relese.yml
+++ b/.github/workflows/Relese.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "v0.0.21"
+        tag_name: "v0.0.22"
         release_name: Release ${{ github.sha }}
         body: |
           Release ${{ github.sha }}
@@ -52,7 +52,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /home/runner/work/lerning-git/lerning-git/hello
+        asset_path: ./home/runner/work/lerning-git/lerning-git/hello
         asset_name: hello
         asset_content_type: application/octet-stream
 
