--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,20 +1,35 @@
-name: Build C++ project
+name: Upload Release
 
-on: [push]
+on: 
+   workflow_dispatch:
 
 jobs:
   build:
-
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install Visual Studio community
-      run: choco install visualstudio2019community
+      - name: Build and compile
+        run: gcc -o hello hello.c
 
-    - name: Install Visual Studio workload
-      run: choco install visualstudio2019-workload-vctools
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v1.0.0
+          release_name: Release v1.0.0
+          draft: false
+          prerelease: false
 
-    - name: Run MSBuild
-      run: msbuild YourProjectFile.sln
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./hello
+          asset_name: hello
+          asset_content_type: application/octet-stream
