--- a/.github/workflows/Ubuntuk.yml
+++ b/.github/workflows/Ubuntuk.yml
@@ -29,5 +29,26 @@ jobs:
 
         make update
         make
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+         tag_name: v2.0.0
+         release_name: Release v2.0.0
+         draft: false
+         prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+         upload_url: ${{ steps.create_release.outputs.upload_url }}
+         asset_path: ./goo-engine
+         asset_name: goo-engine
+         asset_content_type: application/octet-stream
    
 
