--- a/.github/workflows/Ubuntuk.yml
+++ b/.github/workflows/Ubuntuk.yml
@@ -33,6 +33,8 @@ jobs:
     - name: Find
       run: |
           ls
+          cd goo-engine
+          ls
           
 
     - name: Create Release
@@ -41,8 +43,8 @@ jobs:
       env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-         tag_name: v2.0.0
-         release_name: Release v2.0.0
+         tag_name: v4.0.0
+         release_name: Release v4.0.0
          draft: false
          prerelease: false
 
